# shapez2ShapeCheck

./: .gitignore  CMakeLists.txt  Makefile  README.md  lookup.cpp  search.cpp  shapez.hpp
